force-app/main/default/objects/Adventure__c/Adventure__c.object-meta.xml
<CustomObject>
    <label>Adventure</label>
    <nameField>
        <label>Adventure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adventures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>