force-app/main/default/objects/Adventure__c/fields/Completed_Formula__c.field-meta.xml
<CustomField>
    <fullName>Completed_Formula__c</fullName>
    <formula>IF(Number_of_Tasks__c &gt; 0, Number_of_Tasks__c = Number_of_Completed_Tasks__c, Completed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>