force-app/main/default/objects/Adventure__c/fields/Header_Image__c.field-meta.xml
<CustomField>
    <fullName>Header_Image__c</fullName>
    <description>Optional URL for Header Image</description>
    <inlineHelpText>This should contain the URL for the header image</inlineHelpText>
    <label>Header Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>