force-app/main/default/objects/Adventure__c/fields/Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Module_Progress__c</fullName>
    <formula>Number_of_Completed_Modules__c /  Number_of_Modules__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Module Progress</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>