force-app/main/default/objects/Adventure__c/fields/Number_of_Completed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Modules__c</fullName>
    <label>Number of Completed Modules</label>
    <summarizedField>Adventure_Step__c.Number_of_Modules__c</summarizedField>
    <summaryFilterItems>
        <field>Adventure_Step__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Adventure_Step__c.Adventure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>