force-app/main/default/objects/Adventure__c/fields/Number_of_Steps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Steps__c</fullName>
    <description>The total number of Adventure Steps in this Adventure</description>
    <inlineHelpText>This is the total number of Adventure Steps in this Adventure</inlineHelpText>
    <label>Number of Steps</label>
    <summaryForeignKey>Adventure_Step__c.Adventure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>