force-app/main/default/objects/Adventure__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <label>Number of Tasks</label>
    <summarizedField>Adventure_Step__c.Number_of_Tasks__c</summarizedField>
    <summaryForeignKey>Adventure_Step__c.Adventure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>