force-app/main/default/objects/Adventure__c/fields/Show_Checkboxes__c.field-meta.xml
<CustomField>
    <fullName>Show_Checkboxes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used for task complete checkbox enable</description>
    <label>Show Checkboxes</label>
    <type>Checkbox</type>
</CustomField>