force-app/main/default/objects/Adventure__c/fields/Source_Template__c.field-meta.xml
<CustomField>
    <fullName>Source_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Adventure__c</referenceTo>
    <relationshipLabel>Cloned Adventures</relationshipLabel>
    <relationshipName>Adventures</relationshipName>
    <type>Lookup</type>
</CustomField>