force-app/main/default/objects/Adventure__c/fields/Title_Image__c.field-meta.xml
<CustomField>
    <fullName>Title_Image__c</fullName>
    <description>URL for image to be displayed behind the Adventure title</description>
    <inlineHelpText>URL for image to be displayed behind the Adventure title</inlineHelpText>
    <label>Title Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>